--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="module-dashboard-container">
-    <p>dashboard works!</p>
     <p>User: {{ user.username }}</p>
     <p>Password: {{ user.password }}</p>
+    <button (click)="downloadPdf(1)">Click me</button>
 </div>
