--- a/src/app/modules/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.scss
@@ -2,8 +2,11 @@
   width: 100%;
   height: 100%;
   border: 1px solid black;
+  border-radius: 5px;
 
   padding: 10px 20px;
 
-  background-color: #51E5FF;
+  color: #111111;
+  background-color: #999;
+  line-height: 1.5em;
 }
