add pdf generation dummy + first display (new window)

--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -2,4 +2,5 @@
     <p>User: {{ user.username }}</p>
     <p>Password: {{ user.password }}</p>
     <button (click)="downloadPdf(1)">Click me</button>
+    <object id="js-pdf-target" mime-type="application/pdf" class="pdf-canvas" src=""></object>
 </div>
